# agentic_ml_research

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  SECURITY.md  compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.codex/skills/build-agent-workflow/: SKILL.md
.codex/skills/build-agent-workflow/agents/: openai.yaml
.codex/skills/build-agent-workflow/references/: workflow-contracts.md
.codex/skills/build-copilot-slice/: SKILL.md
.codex/skills/build-copilot-slice/agents/: openai.yaml
.codex/skills/build-copilot-slice/references/: vertical-slice-contract.md
.codex/skills/build-ml-experiment/: SKILL.md
.codex/skills/build-ml-experiment/agents/: openai.yaml
.codex/skills/build-ml-experiment/references/: ml-safety-checklist.md
.codex/skills/build-secure-sandbox/: SKILL.md
.codex/skills/build-secure-sandbox/agents/: openai.yaml
.codex/skills/evaluate-agentic-copilot/: SKILL.md
.codex/skills/plan-agentic-ml-feature/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  eval.yml  feature.yml
.github/workflows/: ci.yml
apps/api/: .dockerignore  Dockerfile  pyproject.toml
apps/api/app/: __init__.py  config.py  contracts.py  logging_config.py  main.py
apps/api/tests/: test_health.py
apps/web/: Dockerfile  package.json
apps/web/app/: globals.css  layout.tsx  loading.tsx  page.tsx
apps/web/components/: health-status.tsx
apps/web/lib/: health.test.ts  health.ts
docs/: GITHUB_WORKFLOW.md  PROJECT_BLUEPRINT.md  ROADMAP.md
docs/adr/: 0000-template.md  0001-python-312.md
(+5 files in other folders)
